--- a/index.html
+++ b/index.html
@@ -452,8 +452,8 @@ body.sort-mode .sort-handle{display:block;}
    ⚙ CONFIGURAZIONE — modifica questi due valori
    Trovi entrambi in: Supabase Dashboard → Project Settings → API
 ══════════════════════════════════════ */
-const SUPABASE_URL  = 'https://XXXXXXXXXXXXXXXX.supabase.co';
-const SUPABASE_ANON = 'eyJ...'; // anon public key
+const SUPABASE_URL  = 'https://bjirlbcnymwibtfjovce.supabase.co';
+const SUPABASE_ANON = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImJqaXJsYmNueW13aWJ0ZmpvdmNlIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzE1MDM3ODUsImV4cCI6MjA4NzA3OTc4NX0.mDwGbTvdPxtY6gUqWus3WvrSyxy4IZdTCMurqZyhww4'; // anon public key
 
 /* ══════════════════════════════════════
    INIT SUPABASE
